实现会员数据查询和简单保存

--- a/ffp-vue/src/assets/main.css
+++ b/ffp-vue/src/assets/main.css
@@ -25,7 +25,8 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
+    place-items: flex-start;
+    justify-content: center;
   }
 
   #app {
